[package]
name = "devssl"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jayashankar"]
description = "Zero-config local HTTPS for development"
license = "Apache-2.0"
repository = "https://github.com/jayashankarvr/devssl"
homepage = "https://github.com/jayashankarvr/devssl"
documentation = "https://docs.rs/devssl"
readme = "README.md"
keywords = ["https", "ssl", "tls", "certificate", "development"]
categories = ["development-tools", "command-line-utilities"]
exclude = [".github/", ".editorconfig", ".gitignore"]

[dependencies]
# Certificate generation
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
time = "0.3"

# Certificate parsing (for reading saved certs)
x509-parser = "0.18"
pem = "3"

# PKCS12 export
p12-keystore = "0.2"

# Key encryption (PKCS#8 with AES-256-CBC)
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }
rand = "0.9"

# Secure memory handling
zeroize = { version = "1", features = ["derive"] }

# Fingerprint computation
sha2 = "0.10"

# Email validation
regex = "1"
once_cell = "1"

# Password input
rpassword = "7"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Cross-platform paths
directories = "6"

# Error handling
thiserror = "2"

# Serialization for config
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# QR code generation
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# Proxy server
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "time", "fs", "process", "macros", "io-util", "sync"] }
hyper = { version = "1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http1"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
http-body-util = "0.1"

# Signal handling for watch command
ctrlc = "3"
libc = "0.2"

# Cross-platform file locking
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true       # Strip symbols (reduces ~2-3MB)
lto = true         # Link-time optimization (smaller + faster)
codegen-units = 1  # Better optimization (slower build, smaller binary)
opt-level = "z"    # Optimize for size

[package.metadata.deb]
maintainer = "Jayashankar <me.jayashankar@gmail.com>"
copyright = "2025, Jayashankar <me.jayashankar@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
devssl provides zero-config local HTTPS certificates for development.
It generates trusted CA certificates and automates certificate management
for local development environments with support for multiple frameworks
and tools."""
depends = "$auto, libnss3-tools"
section = "utils"
priority = "optional"
assets = [
    ["target/release/devssl", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/devssl/", "644"],
]

[package.metadata.deb.systemd-units]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/devssl", dest = "/usr/bin/devssl", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/devssl/LICENSE", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/devssl/README.md", mode = "644" },
]
requires = { nss-tools = "*" }
